<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PropErreurActivity" >

    <TextView
        android:id="@+id/txtNomBarPropErreur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomDuBar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    
    <EditText
        android:id="@+id/etxtNomBarPropErreur"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_toRightOf="@id/txtNomBarPropErreur"
        android:layout_alignBaseline="@id/txtNomBarPropErreur"
        android:inputType="text" />
    
    <ImageView
   	    android:id="@+id/imgTelephonePropErreur"
   	    android:layout_width="25dp"
   	    android:layout_height="25dp"
   	    android:layout_below="@id/etxtNomBarPropErreur"
   	    android:layout_alignLeft="@id/txtNomBarPropErreur"
   	    android:contentDescription="@string/contentDescription"
   	    android:src="@drawable/ic_telephone_nb"
   	    android:layout_marginRight="10dp"
   	    android:visibility="visible" />
    
    <EditText
        android:id="@+id/etxtNumTelBarPropErreur"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignLeft="@id/etxtNomBarPropErreur"
        android:layout_below="@id/etxtNomBarPropErreur"
   	    android:inputType="phone"
   	    android:visibility="visible"
   	    android:maxLength="10" />

    <ImageView
   	    android:id="@+id/imgMailPropErreur"
   	    android:layout_width="25dp"
   	    android:layout_height="25dp"
   	    android:layout_below="@id/etxtNumTelBarPropErreur"
   	    android:layout_alignLeft="@id/txtNomBarPropErreur"
   	    android:contentDescription="@string/contentDescription"
   	    android:src="@drawable/ic_mail_nb"
   	    android:layout_marginRight="10dp"
        android:visibility="visible" />
    
    <EditText
        android:id="@+id/etxtMailBarPropErreur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/etxtNomBarPropErreur"
        android:layout_below="@id/etxtNumTelBarPropErreur"
        android:inputType="textEmailAddress"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtTitreInfosPropErreur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txtNomBarPropErreur"
        android:layout_below="@id/etxtMailBarPropErreur"
        android:layout_marginLeft="5dp" />
    
    <EditText
        android:id="@+id/etxtInfosPropErreur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitreInfosPropErreur"
        android:layout_margin="5dp"
        android:inputType="textMultiLine"
        android:lines="4" />
    
    <Button 
        android:id="@+id/btnValidPropErreur"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/valider"
        android:layout_below="@id/etxtInfosPropErreur"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp" />
    
</RelativeLayout>
